# zoom_video_sdk_session_recorder

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  add_user.sh  build_install.sh  config.example.json  config.json.example  config_example.json  deploy_to_aws.sh  deploy_to_local_container.sh  docker-compose.yml  remove_from_aws.sh  remove_from_local_container.sh  rm_all_user.sh  set_env.sh  user_join.sh  visit_app_from_aws.sh  visit_app_from_local_container.sh
api/: api.js  package.json
api/static/: index.html
docker/recording_gallary/: Dockerfile
docker/recording_gallary/server/: package.json
docker/recording_gallary/server/api/: api.js
docker/recording_gallary/server/static/: index.html
include/: HCNetSDK.h
include/zoom_video_sdk/: zoom_video_sdk_def.h  zoom_video_sdk_delegate_interface.h  zoom_video_sdk_interface.h
include/zoom_video_sdk/helpers/: zoom_video_sdk_audio_helper_interface.h  zoom_video_sdk_audio_setting_interface.h  zoom_video_sdk_phone_helper_interface.h  zoom_video_sdk_share_helper_interface.h  zoom_video_sdk_share_setting_interface.h  zoom_video_sdk_user_helper_interface.h  zoom_video_sdk_video_helper_interface.h
src/: file_video_source.cpp  file_video_source.h  hikvision_camera.cpp  hikvision_camera.h  hikvision_camera_operation.cpp  hikvision_camera_operation.h  hikvision_video_source.cpp  hikvision_video_source.h  opencv_video_source.cpp  opencv_video_source.h  raw_data_ffmpeg_encoder.cpp  raw_data_ffmpeg_encoder.h  video_sdk_send_raw_data.cpp  video_sdk_session_recorder.cpp  yuv_writer.cpp  yuv_writer.h  zoom_v-sdk_linux_bot.cpp  zoom_video_sdk_delegate.cpp  zoom_video_sdk_delegate.h
